# pointcloud_roi

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/pointcloud_roi/: detected_roi_filter.h  filter_detected_roi.h  filter_nodelet.h  filter_red_clusters.h  red_cluster_filter.h  robot_body_filter.h  utils.h
src/: detected_roi_filter.cpp  filter_detected_roi_node.cpp  filter_red_clusters_node.cpp  nodelets.cpp  red_cluster_filter.cpp  visualize_pwr.cpp
src/nodelets/: filter_detected_roi.cpp  filter_red_clusters.cpp
